# llm-adventure

./: .gitignore  CHECKLIST_IMPLEMENTATION_COMPLETE.md  CHECKLIST_SYSTEM.md  CLAUDE.md  INTELLIGENT_WIZARD_EXAMPLE.md  NEXT_STEPS.md  PHASE_1_IMPLEMENTATION.md
api/: .env.example  CONVERSATION_PLUGIN_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  PHASE_1_2_COMPLETE.md  SETUP.md  WORLD_BUILDER_PLUGIN_COMPLETE.md  __init__.py  adventure_game.py  alembic.ini  app.py  pyproject.toml  requirements.txt  run.py  test_checklist.py
api/agents/: __init__.py  simple_agent.py  spatial_planner_agent.py  wizard_completion_agent.py  world_builder.py
api/config/: __init__.py  database.py  deepagent_config.py  llm.py  llm_config.py  orm_database.py  settings.py  world_requirements.py
api/core/: __init__.py  error_recovery.py  llm_factory.py  logging.py  plugin_base.py  plugin_registry.py  startup.py  tool_registry.py
api/db/: models.py
api/docs/: WEBSOCKET_API.md
api/middleware/: __init__.py
api/migrations/: README  env.py
api/migrations/versions/: 002_create_initial_schema.py  003_comprehensive_world_building.py
api/models/: __init__.py  chat.py  world_building.py
api/plugins/: __init__.py  conversation_plugin.py  world_builder_plugin.py
api/routes/: __init__.py  chat.py  errors.py  general.py  world_building.py
api/services/: __init__.py  checklist_evaluator.py  coordinate_mapper.py  world_building_service.py
api/shared/: __init__.py
api/shared/tools/: __init__.py  database.py  file.py  web.py
api/tests/: __init__.py  test_coordinate_mapper_integration.py  test_deepagent_integration.py  test_spatial_planner_agent.py  test_spatial_tools.py  test_wizard_service.py  test_world_builder_agent.py
api/tests/core/: test_error_recovery.py  test_llm_factory.py  test_logging.py  test_settings.py  (+4 more)
api/tools/: __init__.py  spatial_calculator.py  world_query.py
api/utils/: __init__.py  logging.py
cli/: .env.example  README.md  adventure_cli.py  api_client.py  chat_direct.py  config.py  display.py  models.py  pyproject.toml  requirements.txt  setup.sh  state.py
cli/utils/: streaming.py
(+9 files in other folders)
