[project]
name = "llm-adventure-api"
version = "0.1.0"
description = "LLM Adventure API - World-building game backend"
requires-python = ">=3.11"
dependencies = [
    "quart==0.19.4",
    "python-dotenv==1.0.0",
    "aiofiles==23.2.1",
    "hypercorn==0.16.0",
    "langchain>=0.3.24",
    "langchain-openai>=0.2.8",
    "langchain-core>=0.3.66",
    "langchain-community>=0.3.24",
    "langgraph>=0.3.0",
    "langgraph-checkpoint-postgres>=2.0.0",
    "psycopg[binary]>=3.2.0",
    "pydantic>=2.9.0",
    "alembic>=1.13.0",
    "SQLAlchemy>=2.0.36",
    "structlog>=24.0.0",
    "tavily-python>=0.5.0",
    "requests>=2.32.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
